Shortened officer names

--- a/officers.html
+++ b/officers.html
@@ -62,7 +62,7 @@
         <div class="span4 officer">
             <div style="background-image: url('images/event2.jpg');" class="officer-picture"></div>
             <div class="officer-content">
-                <div class="text officer-name">Natchapol Praditpetchara (Golf)</div>
+                <div class="text officer-name">Natchapol Praditpetchara</div>
                 <div class="text officer-position">President</div>
                 <div class="text officer-subtitle">Political Economy 2015</div>
                 <div class="text officer-description">Hello and sawadee krub everyone! My name is Golf and I'm very proud and honored to serve as the president of ThaiSA for the 2013-2014 academic year! I have been a part of ThaiSA's officer board since January 2012 and I have absolutely loved every minute of it. Before coming to Cal, I lived in Thailand my entire life, graduating from Ruamrudee International School in 2011. I'm a sports fanatic in general (both watching and playing) but I'm especially into soccer and tennis. I'm a very open and friendly person (trust me!) and I love meeting new people so feel free to talk to me anytime if you see me on campus :)
@@ -73,7 +73,7 @@
         <div class="span4 officer">
             <div style="background-image: url('images/event2.jpg');" class="officer-picture"></div>
             <div class="officer-content">
-                <div class="text officer-name">Nopphon Siranart (Bon)</div>
+                <div class="text officer-name">Nopphon Siranart</div>
                 <div class="text officer-position">Internal Vice President</div>
                 <div class="text officer-subtitle">Computer Science 2016</div>
                 <div class="text officer-description">Hi everyone! I am Bon. My friends sometimes call me Balls though. Nice to meet you all and hope you guys enjoy being a part of ThaiSA and all ThaiSA activities in the upcoming year. Looking forward to meeting you all.</div>
@@ -82,7 +82,7 @@
         <div class="span4 officer">
             <div style="background-image: url('images/event2.jpg');" class="officer-picture"></div>
             <div class="officer-content">
-                <div class="text officer-name">Chulabush Khatancharoen (Fourth)</div>
+                <div class="text officer-name">Chulabush Khatancharoen</div>
                 <div class="text officer-position">External Vice President</div>
                 <div class="text officer-subtitle">Environmental Science 2016</div>
                 <div class="text officer-description">I'm fully Thai. I love Thailand. I love animals. Right now, I'm also a research student in the Museum of Vertebrate Zoology. My focused area is to work on marine mammals in Thailand. So, anything about Thailand, ask me! I would love to share. Love you! Jub jub! รักพ่อรักแม่ รักเพื่อนๆและพี่น้องทุกคน ฉันรู้สึกภูมิใจที่ฉันได้เกิดมาเป็นคนไทย เกิดบนแผ่นดินไทย และสุดท้ายฉันอยากจะบอกว่าฉันรักประเทศไทย</div>
@@ -93,7 +93,7 @@
         <div class="span4 officer">
             <div style="background-image: url('images/event2.jpg');" class="officer-picture"></div>
             <div class="officer-content">
-                <div class="text officer-name">Natnicha Vanitchanant (Numfah)</div>
+                <div class="text officer-name">Natnicha Vanitchanant</div>
                 <div class="text officer-position">Secretary</div>
                 <div class="text officer-subtitle">Microbial Biology 2016</div>
                 <div class="text officer-description">Hello ThaiSA! My name is Natnicha Vanitchanant and most people know me by my nickname, Numfah (น้ำฟ้า). Back in Bangkok before coming to UC Berkeley, I went to Ruamrudee International School. Feel free to email me at numfah_23@berkeley.edu if you have any questions or add me on Facebook if you want to talk! I'm looking forward to meeting all of you :)</div>
@@ -102,16 +102,16 @@
         <div class="span4 officer">
             <div style="background-image: url('images/event2.jpg');" class="officer-picture"></div>
             <div class="officer-content">
-                <div class="text officer-name">Chanoknan Vorasucha (Fah)</div>
+                <div class="text officer-name">Chanoknan Vorasucha</div>
                 <div class="text officer-position">Treasurer</div>
-                <div class="text officer-subtitle">Electrical Engineering and Computer Sciences 2016</div>
+                <div class="text officer-subtitle">EECS 2016</div>
                 <div class="text officer-description">Sawasdee ka! My real name is Chanoknan Vorasucha, but I usually go by my nickname, Fah. I am currently a sophomore majoring in EECS. I was born and raised in Bangkok, Thailand and have attended Thai public schools all my life (until I decided to go to Cal that is!) I like to read (usually novels, or some other things that are not so academic or useful...) and would spend the rest of the time daydreaming or figuring out my computer science homework. I have been involved with ThaiSA since my freshman year, and the memory and experience I've gained is invaluable. I hope that your experience with ThaiSA will be as fun and memorable, and it's really, really nice to meet you all!</div>
             </div>
         </div> <!-- officer -->
         <div class="span4 officer">
             <div style="background-image: url('images/event2.jpg');" class="officer-picture"></div>
             <div class="officer-content">
-                <div class="text officer-name">Panthita Punyaneramitdee (Panpan)</div>
+                <div class="text officer-name">Panthita Punyaneramitdee</div>
                 <div class="text officer-position">Outreach Director</div>
                 <div class="text officer-subtitle">Pre-Business 2016</div>
                 <div class="text officer-description">Hey all! My name is Panpan. I will be your Outreach Director, but I am more willing to help with other work or help out with any problems. I enjoy keeping myself busy, doing activities, meeting people, playing guitar, playing basketball, and etc. If those activities are what you like to do, then hit me up!</div>
