Added Bon's photo

--- a/officers.html
+++ b/officers.html
@@ -71,7 +71,7 @@
             </div>
         </div> <!-- officer -->
         <div class="span4 officer">
-            <div style="background-image: url('images/event2.jpg');" class="officer-picture"></div>
+            <div style="background-image: url('https://sphotos-b-sjc.xx.fbcdn.net/hphotos-prn1/66792_10151867906840011_703270142_n.jpg');" class="officer-picture"></div>
             <div class="officer-content">
                 <div class="text officer-name">Nopphon Siranart</div>
                 <div class="text officer-position">Internal Vice President</div>
