--- a/officers.html
+++ b/officers.html
@@ -118,6 +118,35 @@
             </div>
         </div> <!-- officer -->
     </div> <!-- officers-row -->
+    <div class="row officers-row">
+        <div class="span4 officer">
+            <div style="background-image: url('images/event2.jpg');" class="officer-picture"></div>
+            <div class="officer-content">
+                <div class="text officer-name">Rasarose Kitmungsa</div>
+                <div class="text officer-position">Marketing Director</div>
+                <div class="text officer-subtitle">Architecture 2015</div>
+                <div class="text officer-description">Was born and raised in Bangkok...is currently working toward being a fun and considerate designer/architect...is saving up for a month-long journey on the train from the top to the bottom of Japan...is hopefully quite amusing ๆ (ฮิฮิ)</div>
+            </div>
+        </div> <!-- officer -->
+        <div class="span4 officer">
+            <div style="background-image: url('images/event2.jpg');" class="officer-picture"></div>
+            <div class="officer-content">
+                <div class="text officer-name">Nichakarn Yordduangjun</div>
+                <div class="text officer-position">Activities Coordinator</div>
+                <div class="text officer-subtitle">MCB with a minor in Japanese 2015</div>
+                <div class="text officer-description">Born in the busy city of Bangkok but sadly, she only stayed in Thailand for about 5 years. Then, along with her parents and older brother, she moved to the sunny state aka California~ Grew up in a nice town called Davis and occasionally helps out at her parents restaurant in downtown. Feel free to swing by anytime when you're in Davis~</div>
+            </div>
+        </div> <!-- officer -->
+        <div class="span4 officer">
+            <div style="background-image: url('images/event2.jpg');" class="officer-picture"></div>
+            <div class="officer-content">
+                <div class="text officer-name">Kavin Phongpandecha</div>
+                <div class="text officer-position">CTO</div>
+                <div class="text officer-subtitle">EECS 2014</div>
+                <div class="text officer-description">Hi, my name is Art, and I will be serving as your Chief Technology Officer for the upcoming academic year. I enjoy meeting new people and making new friends, so feel free to talk to me about whatever! My goal this semester for ThaiSA is to maintain the website and keep everyone updated with news and events. I love technology and I am looking for new ways to improve communication and interaction between the officers and the Thai community here at Berkeley. I am excited to work with everyone and am looking forward to a great semester!</div>
+            </div>
+        </div> <!-- officer -->
+    </div>
 </div>
 
 <!-- Past ThaiSA Officers -->
@@ -126,15 +155,73 @@
     <div class="row past-year-container">
         <div class="span3 past-left-container">
             <div class="left-content">
-                <div style="background-image: url('images/event2.jpg');" class="past-primary-picture"></div>
-                <div class="past-primary-name">Mickey Mouse</div>
+                <div style="background-image: url('https://sphotos-a-sjc.xx.fbcdn.net/hphotos-ash3/946352_10151867907040011_2098391281_n.jpg');" class="past-primary-picture"></div>
+                <div class="past-primary-name">Ratana Patumwat (Kevin)</div>
                 <div class="past-primary-position">President</div>
             </div>
         </div>
         <div class="span9 past-right-container">
             <div class="row-fluid past-officers-row">
                 <div class="past-officer span4">
+                    <div class="past-officer-name">Pechsiree Pechvijitra (Noo)</div>
+                    <div class="past-officer-position">Internal Vice President</div>
+                </div>
+                <div class="past-officer span4">
+                    <div class="past-officer-name">Nitta Pattarachanyakul</div>
+                    <div class="past-officer-position">External Vice President</div>
+                </div>
+                <div class="past-officer span4">
+                    <div class="past-officer-name">Chulabush Khatancharoen</div>
+                    <div class="past-officer-position">Secretary</div>
+                </div>
+            </div>
+            <div class="row-fluid past-officers-row">
+                <div class="past-officer span4">
+                    <div class="past-officer-name">Jeffrey Jankaew</div>
+                    <div class="past-officer-position">Treasurer</div>
+                </div>
+                <div class="past-officer span4">
+                    <div class="past-officer-name">Natchapol Praditpetchara</div>
+                    <div class="past-officer-position">Outreach Director</div>
+                </div>
+                <div class="past-officer span4">
                     <div class="past-officer-name">Mickey Mouse</div>
+                    <div class="past-officer-position">Actor</div>
+                </div>
+            </div>
+            <div class="row-fluid past-officers-row">
+                <div class="past-officer span4">
+                    <div class="past-officer-name">Mickey Mouse</div>
+                    <div class="past-officer-position">Actor</div>
+                </div>
+                <div class="past-officer span4">
+                    <div class="past-officer-name">Mickey Mouse</div>
+                    <div class="past-officer-position">Actor</div>
+                </div>
+                <div class="past-officer span4">
+                    <div class="past-officer-name">Mickey Mouse</div>
+                    <div class="past-officer-position">Actor</div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Past ThaiSA Officers -->
+<div class="container past-officers-content">
+    <div class="year-header" data-year="2011">2011<span class="top-link">(top)</span></div>
+    <div class="row past-year-container">
+        <div class="span3 past-left-container">
+            <div class="left-content">
+                <div style="background-image: url('https://sphotos-a-sjc.xx.fbcdn.net/hphotos-ash3/946352_10151867907040011_2098391281_n.jpg');" class="past-primary-picture"></div>
+                <div class="past-primary-name">Ratana Patumwat (Kevin)</div>
+                <div class="past-primary-position">President</div>
+            </div>
+        </div>
+        <div class="span9 past-right-container">
+            <div class="row-fluid past-officers-row">
+                <div class="past-officer span4">
+                    <div class="past-officer-name">Pechsiree Pechvijitra (Noo)</div>
                     <div class="past-officer-position">Actor</div>
                 </div>
                 <div class="past-officer span4">
