Officer page changes

--- a/officers.html
+++ b/officers.html
@@ -27,13 +27,13 @@
         <div class="menu-bar span8">
             <ul>
                 <!-- Must be the following format to be spaceless -->
-                <li><a href="/index.html">home</a></li><li>
-                <a href="/about.html">about</a></li><li>
-                <a href="/events.html">events</a></li><li class="selected">
-                <a href="/officers.html">people</a></li><li>
-                <a href="/mentorship.html">mentorship</a></li><li>
-                <a href="/dept.html">thai classes</a></li><li>
-                <a href="/contact.html">contact</a></li>
+                <li><a href="/index.html">Home</a></li><li>
+                <a href="/about.html">About</a></li><li>
+                <a href="/events.html">Events</a></li><li class="selected">
+                <a href="/officers.html">People</a></li><li>
+                <a href="/mentorship.html">Mentorship</a></li><li>
+                <a href="/thaiclasses.html">Thai Classes</a></li><li>
+                <a href="/contact.html">Contact</a></li>
             </ul>
         </div>
     </div>
@@ -141,7 +141,7 @@
             <div style="background-image: url('images/event2.jpg');" class="officer-picture"></div>
             <div class="officer-content">
                 <div class="text officer-name">Kavin Phongpandecha</div>
-                <div class="text officer-position">CTO</div>
+                <div class="text officer-position">Webmaster</div>
                 <div class="text officer-subtitle">EECS 2014</div>
                 <div class="text officer-description">Hi, my name is Art, and I will be serving as your Chief Technology Officer for the upcoming academic year. I enjoy meeting new people and making new friends, so feel free to talk to me about whatever! My goal this semester for ThaiSA is to maintain the website and keep everyone updated with news and events. I love technology and I am looking for new ways to improve communication and interaction between the officers and the Thai community here at Berkeley. I am excited to work with everyone and am looking forward to a great semester!</div>
             </div>
@@ -151,7 +151,7 @@
 
 <!-- Past ThaiSA Officers -->
 <div class="container past-officers-content">
-    <div class="year-header" data-year="2012">2012<span class="top-link">(top)</span></div>
+    <div class="year-header" data-year="2012">2012-2013<span class="top-link">(top)</span></div>
     <div class="row past-year-container">
         <div class="span3 past-left-container">
             <div class="left-content">
@@ -185,22 +185,22 @@
                     <div class="past-officer-position">Outreach Director</div>
                 </div>
                 <div class="past-officer span4">
-                    <div class="past-officer-name">Mickey Mouse</div>
-                    <div class="past-officer-position">Actor</div>
+                    <div class="past-officer-name">Nutchapol Charkarutpahu</div>
+                    <div class="past-officer-position">Fundraising Chair</div>
                 </div>
             </div>
             <div class="row-fluid past-officers-row">
                 <div class="past-officer span4">
-                    <div class="past-officer-name">Mickey Mouse</div>
-                    <div class="past-officer-position">Actor</div>
+                    <div class="past-officer-name">Nathanan Tantivasadakarn</div>
+                    <div class="past-officer-position">Historian</div>
                 </div>
                 <div class="past-officer span4">
-                    <div class="past-officer-name">Mickey Mouse</div>
-                    <div class="past-officer-position">Actor</div>
+                    <div class="past-officer-name">Nina Udomsak</div>
+                    <div class="past-officer-position">Publicity Coordinator</div>
                 </div>
                 <div class="past-officer span4">
-                    <div class="past-officer-name">Mickey Mouse</div>
-                    <div class="past-officer-position">Actor</div>
+                    <div class="past-officer-name">Chanoknan Vorasucha</div>
+                    <div class="past-officer-position">Webmaster</div>
                 </div>
             </div>
         </div>
@@ -209,56 +209,56 @@
 
 <!-- Past ThaiSA Officers -->
 <div class="container past-officers-content">
-    <div class="year-header" data-year="2011">2011<span class="top-link">(top)</span></div>
+    <div class="year-header" data-year="2011">2011-2012<span class="top-link">(top)</span></div>
     <div class="row past-year-container">
         <div class="span3 past-left-container">
             <div class="left-content">
-                <div style="background-image: url('https://sphotos-a-sjc.xx.fbcdn.net/hphotos-ash3/946352_10151867907040011_2098391281_n.jpg');" class="past-primary-picture"></div>
-                <div class="past-primary-name">Ratana Patumwat (Kevin)</div>
+                <div style="background-image: url('https://sphotos-a-sjc.xx.fbcdn.net/hphotos-prn2/1236159_10151867907000011_1736902388_n.jpg');" class="past-primary-picture"></div>
+                <div class="past-primary-name">Nitta Pattarachanyakul</div>
                 <div class="past-primary-position">President</div>
             </div>
         </div>
         <div class="span9 past-right-container">
             <div class="row-fluid past-officers-row">
                 <div class="past-officer span4">
-                    <div class="past-officer-name">Pechsiree Pechvijitra (Noo)</div>
-                    <div class="past-officer-position">Actor</div>
+                    <div class="past-officer-name">Nina Udomsak</div>
+                    <div class="past-officer-position">Vice President</div>
                 </div>
                 <div class="past-officer span4">
-                    <div class="past-officer-name">Mickey Mouse</div>
-                    <div class="past-officer-position">Actor</div>
+                    <div class="past-officer-name">Jessica Gillotte</div>
+                    <div class="past-officer-position">Secretary</div>
                 </div>
                 <div class="past-officer span4">
-                    <div class="past-officer-name">Mickey Mouse</div>
-                    <div class="past-officer-position">Actor</div>
-                </div>
-            </div>
-            <div class="row-fluid past-officers-row">
-                <div class="past-officer span4">
-                    <div class="past-officer-name">Mickey Mouse</div>
-                    <div class="past-officer-position">Actor</div>
-                </div>
-                <div class="past-officer span4">
-                    <div class="past-officer-name">Mickey Mouse</div>
-                    <div class="past-officer-position">Actor</div>
-                </div>
-                <div class="past-officer span4">
-                    <div class="past-officer-name">Mickey Mouse</div>
-                    <div class="past-officer-position">Actor</div>
+                    <div class="past-officer-name">Chirat Vibhagool</div>
+                    <div class="past-officer-position">Treasurer</div>
                 </div>
             </div>
             <div class="row-fluid past-officers-row">
                 <div class="past-officer span4">
-                    <div class="past-officer-name">Mickey Mouse</div>
-                    <div class="past-officer-position">Actor</div>
+                    <div class="past-officer-name">Supitchaya Phupisut</div>
+                    <div class="past-officer-position">Co-Activities Coordinator</div>
                 </div>
                 <div class="past-officer span4">
-                    <div class="past-officer-name">Mickey Mouse</div>
-                    <div class="past-officer-position">Actor</div>
+                    <div class="past-officer-name">Tong Tantrativud</div>
+                    <div class="past-officer-position">Co-Activities Coordinator</div>
                 </div>
                 <div class="past-officer span4">
-                    <div class="past-officer-name">Mickey Mouse</div>
-                    <div class="past-officer-position">Actor</div>
+                    <div class="past-officer-name">Boss Nuntaworanuch</div>
+                    <div class="past-officer-position">Internal Affairs Manager</div>
+                </div>
+            </div>
+            <div class="row-fluid past-officers-row">
+                <div class="past-officer span4">
+                    <div class="past-officer-name">Kavin Phongpandecha</div>
+                    <div class="past-officer-position">Webmaster</div>
+                </div>
+                <div class="past-officer span4">
+                    <div class="past-officer-name">Natchapol Praditpetchara</div>
+                    <div class="past-officer-position">Co-Publicity Chair</div>
+                </div>
+                <div class="past-officer span4">
+                    <div class="past-officer-name">Ratana Patumwat (Kevin)</div>
+                    <div class="past-officer-position">Co-Publicity Chair</div>
                 </div>
             </div>
         </div>
@@ -274,8 +274,8 @@
                 <div class="list-header">SUPPORT</div>
                 <div class="social-container">
                     <ul>
-                        <li><a href="http://www.facebook.com/yzhu25"><div class='icons facebook'></div></a></li>
-                        <li><a href="mailto:yuxinzhu@berkeley.edu"><div class='icons email'></div></a></li>
+                        <li><a href="https://www.facebook.com/UCBThaiSA?ref=br_tf"><div class='icons facebook'></div></a></li>
+                        <li><a href="mailto:thaisa.ucberkeley@gmail.com"><div class='icons email'></div></a></li>
                     </ul>
                 </div>
             </div>
@@ -283,8 +283,9 @@
             <div class="span2 footer-column">
                 <div class="list-header">MEET US</div>
                 <div class="tabling-container">
-                    <div>Sproul Hall</div>
-                    <div>11-2PM Monday-Thursday</div>
+                    <div>Little Bangkok</div>
+                    <div>2338 Bancroft Way, Berkeley, CA 94704</div>
+                    <div>11-5PM Monday-Friday</div>
                 </div>
             </div>
 
@@ -292,9 +293,9 @@
                 <div class="list-header">GET IN TOUCH</div>
                 <div class="contact-container">
                     <ul>
-                        <li class="footer-link"><a href="mailto:yuxinzhu@berkeley.edu">President</a></li>
-                        <li class="footer-link"><a href="mailto:yuxinzhu@berkeley.edu">Secretary</a></li>
-                        <li class="footer-link"><a href="mailto:yuxinzhu@berkeley.edu">Webmaster</a></li>
+                        <li class="footer-link"><a href="mailto:natchapol.p@berkeley.edu">President</a></li>
+                        <li class="footer-link"><a href="mailto:numfah_23@berkeley.edu">Secretary</a></li>
+                        <li class="footer-link"><a href="mailto:k.phongpandecha@gmail.com">Webmaster</a></li>
                     </ul>
                 </div>
             </div>
@@ -303,19 +304,19 @@
                 <div class="list-header">SITE MAP</div>
                 <div class="sitemap-container">
                     <ul>
-                        <li class="footer-link"><a href="/about.html">home</a></li>
-                        <li class="footer-link"><a href="/about.html">about</a></li>
-                        <li class="footer-link"><a href="/about.html">events</a></li>
-                        <li class="footer-link"><a href="/about.html">officers</a></li>
-                        <li class="footer-link"><a href="/about.html">mentorship</a></li>
-                        <li class="footer-link"><a href="/about.html">thai classes</a></li>
-                        <li class="footer-link"><a href="/about.html">contact</a></li>
+                        <li class="footer-link"><a href="/index.html">Home</a></li>
+                        <li class="footer-link"><a href="/about.html">About</a></li>
+                        <li class="footer-link"><a href="/events.html">Events</a></li>
+                        <li class="footer-link"><a href="/officers.html">Officers</a></li>
+                        <li class="footer-link"><a href="/mentorship.html">Mentorship</a></li>
+                        <li class="footer-link"><a href="/thaiclasses.html">Thai Classes</a></li>
+                        <li class="footer-link"><a href="/contact.html">Contact</a></li>
                     </ul>
                 </div>
             </div>
         </div>
         <div class="row-fluid footer-bottom-container">
-            <div class="span12 footer-bottom">&copy; 2013 U.C. Berkeley Thailand Student Association (ThaiSA) ** Designed By Yuxin Zhu</div>
+            <div class="span12 footer-bottom">&copy; 2013 UC Berkeley Thai Student Association (ThaiSA)</div>
         </div>
     </div>
 </div>
