People page changes

--- a/officers.html
+++ b/officers.html
@@ -44,13 +44,12 @@
 <!-- Header with Year Menu -->
 <div class="container header-container">
     <div class="row header-content">
-        <div class="span5 header-text-container"><div class="header-text">Officers</div></div>
+        <div class="span5 header-text-container"><div class="header-text">2013-2014 Officers Board</div></div>
         <div class="span7 year-menu-container">
             <!-- For past officers, set attr id as year -->
             <div class="year-menu">
-                <div class="year-link" id="2012">2012</div>
-                <div class="year-link" id="2011">2011</div>
-                <div class="year-link" id="2010">2010</div>
+                <div class="year-link" id="2012">2012-2013</div>
+                <div class="year-link" id="2011">2011-2012</div>
             </div>
         </div>
     </div>
