--- a/officers.html
+++ b/officers.html
@@ -39,12 +39,12 @@
     </div>
 </div>
 
-<div class="background-header-container"><div class="background-header">Officers</div></div>
+<div class="background-header-container"><div class="background-header">2013-2014</div></div>
 
 <!-- Header with Year Menu -->
 <div class="container header-container">
     <div class="row header-content">
-        <div class="span5 header-text-container"><div class="header-text">2013-2014 Officers Board</div></div>
+        <div class="span5 header-text-container"><div class="header-text">Officers</div></div>
         <div class="span7 year-menu-container">
             <!-- For past officers, set attr id as year -->
             <div class="year-menu">
