--- a/officers.html
+++ b/officers.html
@@ -39,7 +39,7 @@
     </div>
 </div>
 
-<div class="background-header-container"><div class="background-header">2013-2014</div></div>
+<div class="background-header-container"><div class="background-header">Officers</div></div>
 
 <!-- Header with Year Menu -->
 <div class="container header-container">
