--- a/officers.html
+++ b/officers.html
@@ -29,8 +29,8 @@
                 <!-- Must be the following format to be spaceless -->
                 <li><a href="/index.html">Home</a></li><li>
                 <a href="/about.html">About</a></li><li>
-                <a href="/events.html">Events</a></li><li class="selected">
-                <a href="/officers.html">People</a></li><li>
+                <a href="/events.html">Events</a></li>
+                <a href="/officers.html">People</a></li><li><li class="selected">
                 <a href="/mentorship.html">Mentorship</a></li><li>
                 <a href="/thaiclasses.html">Thai Classes</a></li><li>
                 <a href="/contact.html">Contact</a></li>
@@ -316,6 +316,7 @@
         </div>
         <div class="row-fluid footer-bottom-container">
             <div class="span12 footer-bottom">&copy; 2013 UC Berkeley Thai Student Association (ThaiSA)</div>
+            <div class="span12 footer-bottom">Designed by Yuxin Zhu</div>
         </div>
     </div>
 </div>
