--- a/about.html
+++ b/about.html
@@ -22,13 +22,13 @@
         <div class="menu-bar span8">
             <ul>
                 <!-- Must be the following format to be spaceless -->
-                <a href="/index.html">Home</a></li><li>
-                <a href="/about.html">About</a></li><li><li class="selected">
-                <a href="/events.html">Events</a></li><li>
-                <a href="/officers.html">People</a></li><li >
-                <a href="/mentorship.html">Mentorship</a></li><li>
-                <a href="/thaiclasses.html">Thai Classes</a></li><li>
-                <a href="/contact.html">Contact</a></li>
+                <li><a href="/index.html">home</a></li><li class="selected">
+                <a href="/about.html">about</a></li><li>
+                <a href="/events.html">events</a></li><li>
+                <a href="/officers.html">people</a></li><li >
+                <a href="/mentorship.html">mentorship</a></li><li>
+                <a href="/contact.html">thai classes</a></li><li>
+                <a href="/contact.html">contact</a></li>
             </ul>
         </div>
     </div>
@@ -118,7 +118,6 @@
         </div>
         <div class="row-fluid footer-bottom-container">
             <div class="span12 footer-bottom">&copy; 2013 U.C. Berkeley Thailand Student Association (ThaiSA)</div>
-            <div class="span12 footer-bottom">Designed by Yuxin Zhu</div>
         </div>
     </div>
 </div>
