--- a/contact.html
+++ b/contact.html
@@ -15,18 +15,20 @@
 </head>
 
 <!-- Main Menu -->
+<div id="wrap">
+<div id="main">
 <div class="container">
     <div class="row">
         <div class="menu-bar span8">
             <ul>
                 <!-- Must be the following format to be spaceless -->
-                <a href="/index.html">Home</a></li><li>
-                <a href="/about.html">About</a></li><li>
-                <a href="/events.html">Events</a></li><li>
-                <a href="/officers.html">People</a></li><li >
-                <a href="/mentorship.html">Mentorship</a></li><li>
-                <a href="/thaiclasses.html">Thai Classes</a></li><li>
-                <a href="/contact.html">Contact</a></li><li class="selected">
+                <li><a href="/index.html">home</a></li><li>
+                <a href="/about.html">about</a></li><li>
+                <a href="/events.html">events</a></li><li>
+                <a href="/officers.html">people</a></li><li>
+                <a href="/mentorship.html">mentorship</a></li><li>
+                <a href="/dept.html">thai classes</a></li><li class="selected">
+                <a href="/contact.html">contact</a></li>
             </ul>
         </div>
     </div>
@@ -123,7 +125,6 @@ onsubmit="submitted=true;"><ol style="padding-left: 0">
         </div>
         <div class="row-fluid footer-bottom-container">
             <div class="span12 footer-bottom">&copy; 2013 U.C. Berkeley Thailand Student Association (ThaiSA)</div>
-            <div class="span12 footer-bottom">Designed by Yuxin Zhu</div>
         </div>
     </div>
 </div>
