--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         <div class="menu-bar span8">
             <ul>
                 <!-- Must be the following format to be spaceless -->
-                <li class="selected"><a href="/index.html">Home</a></li><li>
-                <a href="/about.html">About</a></li><li>
-                <a href="/events.html">Events</a></li><li>
-                <a href="/officers.html">People</a></li><li >
-                <a href="/mentorship.html">Mentorship</a></li><li>
-                <a href="/thaiclasses.html">Thai Classes</a></li><li>
-                <a href="/contact.html">Contact</a></li>
+                <li class="selected"><a href="/index.html">home</a></li><li>
+                <a href="/about.html">about</a></li><li>
+                <a href="/events.html">events</a></li><li>
+                <a href="/officers.html">people</a></li><li >
+                <a href="/mentorship.html">mentorship</a></li><li>
+                <a href="/contact.html">thai classes</a></li><li>
+                <a href="/contact.html">contact</a></li>
             </ul>
         </div>
     </div>
@@ -118,20 +118,19 @@
                 <div class="list-header">SITE MAP</div>
                 <div class="sitemap-container">
                     <ul>
-                        <li class="footer-link"><a href="/index.html">Home</a></li>
-                        <li class="footer-link"><a href="/about.html">About</a></li>
-                        <li class="footer-link"><a href="/events.html">Events</a></li>
-                        <li class="footer-link"><a href="/officers.html">Officers</a></li>
-                        <li class="footer-link"><a href="/mentorship.html">Mentorship</a></li>
-                        <li class="footer-link"><a href="/thaiclasses.html">Thai Classes</a></li>
-                        <li class="footer-link"><a href="/contact.html">Contact</a></li>
+                        <li class="footer-link"><a href="/about.html">home</a></li>
+                        <li class="footer-link"><a href="/about.html">about</a></li>
+                        <li class="footer-link"><a href="/about.html">events</a></li>
+                        <li class="footer-link"><a href="/about.html">officers</a></li>
+                        <li class="footer-link"><a href="/about.html">mentorship</a></li>
+                        <li class="footer-link"><a href="/about.html">thai classes</a></li>
+                        <li class="footer-link"><a href="/about.html">contact</a></li>
                     </ul>
                 </div>
             </div>
         </div>
         <div class="row-fluid footer-bottom-container">
-            <div class="span12 footer-bottom">&copy; 2013 UC Berkeley Thai Student Association (ThaiSA)</div>
-            <div class="span12 footer-bottom">Designed by Yuxin Zhu</div>
+            <div class="span12 footer-bottom">&copy; 2013 U.C. Berkeley Thailand Student Association (ThaiSA) ** Designed By Yuxin Zhu</div>
         </div>
     </div>
 </div>
